[gd_scene load_steps=2 format=2]

[ext_resource path="res://oos_respwawner/out_of_screen_spawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Position2D"]
position = Vector2( 416, -504 )
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
